updated samples for 2022v2

--- a/Grid/FlexGridExplorer/FlexGridExplorer/FlexGridExplorer.csproj
+++ b/Grid/FlexGridExplorer/FlexGridExplorer/FlexGridExplorer.csproj
@@ -74,6 +74,7 @@
     <None Remove="View\SelectionModes.xaml" />
     <None Remove="View\StarSizing.xaml" />
     <None Remove="View\Unbound.xaml" />
+    <None Remove="View\VirtualMode.xaml" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -86,19 +87,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="C1.WinUI.Accordion">
-      <Version>1.0.20221.198</Version>
+      <Version>1.0.20222.256</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Core">
-      <Version>1.0.20221.198</Version>
+      <Version>1.0.20222.256</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.DataPager">
-      <Version>1.0.20221.198</Version>
+      <Version>1.0.20222.256</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Grid">
-      <Version>1.0.20221.198</Version>
+      <Version>1.0.20222.256</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Input">
-      <Version>1.0.20221.198</Version>
+      <Version>1.0.20222.256</Version>
     </PackageReference>
     <PackageReference Include="PInvoke.User32" Version="0.7.104" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
@@ -147,6 +148,9 @@
   <ItemGroup>
     <Page Update="View\EditCustomerForm.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="View\VirtualMode.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
   <ItemGroup>
