--- a/Calendar/CalendarExplorer/CalendarExplorer/CalendarExplorer.csproj
+++ b/Calendar/CalendarExplorer/CalendarExplorer/CalendarExplorer.csproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -49,13 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="C1.WinUI.Calendar">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Core">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="PInvoke.User32" Version="0.7.104" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
   <ItemGroup>
