--- a/Grid/CustomRows/CustomRows/CustomRows.csproj
+++ b/Grid/CustomRows/CustomRows/CustomRows.csproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -44,19 +45,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="C1.WinUI.Core">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.DataPager">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Grid">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
+    </PackageReference>
+    <PackageReference Include="C1.WinUI.GridControl">
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Input">
-      <Version>1.0.20222.256</Version>
+      <Version>1.1.20223.370</Version>
     </PackageReference>
     <PackageReference Include="PInvoke.User32" Version="0.7.104" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 </Project>
