--- a/NET_8/Grid/FlexGridExplorer/FlexGridExplorer/FlexGridExplorer.csproj
+++ b/NET_8/Grid/FlexGridExplorer/FlexGridExplorer/FlexGridExplorer.csproj
@@ -66,6 +66,7 @@
     <None Remove="View\FullTextFilter.xaml" />
     <None Remove="View\GettingStarted.xaml" />
     <None Remove="View\Grouping.xaml" />
+    <None Remove="View\HierarchicalRows.xaml" />
     <None Remove="View\LiveUpdates.xaml" />
     <None Remove="View\MouseHover.xaml" />
     <None Remove="View\NewRow.xaml" />
@@ -90,24 +91,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="C1.WinUI.Accordion">
-      <Version>1.4.20233.673</Version>
+      <Version>1.5.20241.803</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Core">
-      <Version>1.4.20233.673</Version>
+      <Version>1.5.20241.803</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.DataPager">
-      <Version>1.4.20233.673</Version>
+      <Version>1.5.20241.803</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Grid">
-      <Version>1.4.20233.673</Version>
+      <Version>1.5.20241.803</Version>
     </PackageReference>
     <PackageReference Include="C1.WinUI.Input">
-      <Version>1.4.20233.673</Version>
+      <Version>1.5.20241.803</Version>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-    <PackageReference Include="PInvoke.User32" Version="0.7.124" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240404000" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +148,11 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="View\HierarchicalRows.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="View\EditCustomerForm.xaml">
